docs-archive/apache-airflow-providers-slack/9.0.0/_sources/_api/airflow/providers/slack/operators/slack_webhook/index.rst.txt
:py:mod:`airflow.providers.slack.operators.slack_webhook`
=========================================================

.. py:module:: airflow.providers.slack.operators.slack_webhook


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.slack.operators.slack_webhook.SlackWebhookOperator




.. py:class:: SlackWebhookOperator(*, slack_webhook_conn_id, message = '', attachments = None, blocks = None, channel = None, username = None, icon_emoji = None, icon_url = None, proxy = None, timeout = None, retry_handlers = None, **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   This operator allows you to post messages to Slack using Incoming Webhooks.

   .. note::
       You cannot override the default channel (chosen by the user who installed your app),
       username, or icon when you're using Incoming Webhooks to post messages.
       Instead, these values will always inherit from the associated Slack App configuration
       (`link <https://api.slack.com/messaging/webhooks#advanced_message_formatting>`_).
       It is possible to change this values only in `Legacy Slack Integration Incoming Webhook
       <https://api.slack.com/legacy/custom-integrations/messaging/webhooks#legacy-customizations>`_.

   :param slack_webhook_conn_id: :ref:`Slack Incoming Webhook <howto/connection:slack>`
       connection id that has Incoming Webhook token in the password field.
   :param message: The formatted text of the message to be published.
       If ``blocks`` are included, this will become the fallback text used in notifications.
   :param attachments: The attachments to send on Slack. Should be a list of
       dictionaries representing Slack attachments.
   :param blocks: The blocks to send on Slack. Should be a list of
       dictionaries representing Slack blocks.
   :param channel: The channel the message should be posted to
   :param username: The username to post to slack with
   :param icon_emoji: The emoji to use as icon for the user posting to Slack
   :param icon_url: The icon image URL string to use in place of the default icon.
   :param proxy: Proxy to make the Slack Incoming Webhook call. Optional
   :param timeout: The maximum number of seconds the client will wait to connect
       and receive a response from Slack. Optional
   :param retry_handlers: List of handlers to customize retry logic in ``slack_sdk.WebhookClient``. Optional

   .. py:attribute:: template_fields
      :type: collections.abc.Sequence[str]
      :value: ('message', 'attachments', 'blocks', 'channel', 'username', 'proxy')

      

   .. py:method:: hook()

      Create and return an SlackWebhookHook (cached).


   .. py:method:: execute(context)

      Call the SlackWebhookHook to post the provided Slack message.



